tests/compile-fail/compile_fail__bad_signature_in_mapfile.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: in signature for opcode 1000: 'z' or 'm' arguments can only appear at the very end
   ┌─ <input>:25:25
   │
25 │         #pragma mapfile "tests/mapfile-with-bad-signature.anmm"
   │                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ error loading mapfile


